--- a/src/arm_pkg/CMakeLists.txt
+++ b/src/arm_pkg/CMakeLists.txt
@@ -34,5 +34,11 @@ install(
   DESTINATION lib/${PROJECT_NAME}
 )
 
+install(
+  PROGRAMS
+  scripts/jointSubscriber.py
+  DESTINATION lib/${PROJECT_NAME}
+)
+
 
 ament_package()
